# phase-II-full-stack-todo-app

./: .gitignore  CLAUDE.md  README.md  add_password_column.py
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.claude/agents/: fastapi-development-assistant.md  neon-database-assistant.md  nextjs-development-assistant.md  sqlmodel-development-assistant.md
.claude/skills/fastapi-async/: SKILL.md
.claude/skills/fastapi-basics/: SKILL.md
.claude/skills/fastapi-database/: SKILL.md
.specify/memory/: constitution.md
backend/: .env  .gitignore  README.md  create_test_user.py  dockerfile  main.py  openapi.json  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/v1/: tasks.py
backend/app/core/: dependencies.py  exception_handlers.py  exceptions.py  security.py
backend/app/db/: database.py  init_db.py
backend/app/models/: __init__.py  task.py  user.py
backend/app/schemas/: task.py
backend/tests/: conftest.py  test_auth.py  test_tasks.py
frontend/: .env  .gitignore  STRUCTURE.md  init-db.js  middleware.ts  package-lock.json  package.json  proxy.ts  test-db-connection.js  test-ssl-connection.js  verify-changes.js
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/components/: app-sidebar.tsx
frontend/hooks/: use-lg-screen.ts
frontend/middleware/: auth.ts
frontend/theme/: ThemeProvider.tsx  config.ts  utils.ts
frontend/types/: auth.ts  index.ts
plugins/better-auth-plugin/: .gitignore  README.md
specs/001-better-auth-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-frontend-backend-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-frontend/: data-model.md  nextjs-agent-context.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ui-redesign/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+264 files in other folders)
